--- a/style.css
+++ b/style.css
@@ -67,6 +67,16 @@ section {
     align-items: center;
 }
 
+section::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    background: linear-gradient(to top, #1c0522, transparent);
+    z-index: 1000;
+}
+
 section img {
     position: absolute;
     top: 0;
@@ -74,10 +84,15 @@ section img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    pointer-events: none;
 }
 
 section img#moon{
     mix-blend-mode: screen;
+}
+
+section img#mountains_front {
+    z-index: 10;
 }
 
 #text {
@@ -88,3 +103,31 @@ section img#moon{
     z-index: 9;
 }
 
+#btn {
+    text-decoration: none;
+    padding: 8px 30px;
+    border-radius: 40px;
+    background: #fff;
+    color: #2b1055;
+    font-size: 1.5em;
+    display: inline-block;
+    z-index: 9;
+    transform: translateY(100px);
+}
+
+.sec {
+    position: relative;
+    padding: 100px;
+    background: #1c0522;
+}
+
+.sec h2 {
+    font-size: 3.5em;
+    margin-bottom: 10px;
+    color: #fff;
+}
+
+.sec p {
+    font-size: 1.2em;
+    color: #fff
+}
